--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,17 +1,17 @@
-Что нового в WordPress для iOS версии 17.5?
+В версии 17.6 вы можете добавить аудиоблок на любой сайт WordPress.com, независимо от вашего тарифа, включая бесплатный. Аудиоблок позволяет легко добавлять подкасты, музыку и звуковые файлы к вашим записям и страницам.
 
-Библиотека "Мои блоки" уже здесь! Создавайте содержимое один раз, сохраняйте свой блок и повторно используйте его снова и снова в любых записях и страницах.В 17.5 вы найдете готовые к использованию блоки многократного использования в меню вставки блоков.
+В "Чтиве" теперь вы увидите количество и сводку отметок "нравится", добавленных к каждой записи. А если вам покажется этого мало, коснитесь сводки, и вы увидите полный список.
 
-Если возможность нажать для добавления новых блоков слишком далеко от меню, 17.5 позволяет добавлять их с помощью команды косой черты (слеша) прямо из редактора. Добавьте слеш, когда вы создаете запись или страницу, нажмите на название блока, и все готово. Меню не требуется.
+Мы также много работали над улучшением UX:
 
-Мы не забыли и про аудиофайлы. Есть ссылка на аудиофайл? В версии 17.5 просто вставьте свой URL-адрес в аудиоблок, и WordPress вставит его в вашу запись.
+Когда вы назначаете родительскую страницу странице без заголовка, вы теперь увидите заполнитель «(без заголовка)» вместо пустой строки, что позволит вам задуматься о названии.
 
-Уведомления об отметках "нравится" также получили дополнительное внимание в версии 17.5. Теперь вы сможете сразу узнать, кому понравились записи и комментарии на вашем сайте.
+Вы никогда не могли редактировать страницы архива сообщений, потому что они создаются автоматически. В версии 17.6 вы также не сможете открывать их в редакторе, что сэкономит вам время.
 
-Мы также много работали над устранением ошибок. Вот что мы исправили:
+Мы также поработали над исправлением:
 
-Программы чтения с экрана теперь могут выбирать шаговую ячейку в редакторе блоков.
+Мы позаботились о некоторых уведомлениях, которые перекрывали панель действий, одно, которое отображает элементы управления значком сайта, другое отображает удаление руководства по быстрому старту, а третье - дополнительные действия в редакторе.
 
-Мы позаботились о том, чтобы крупный текст не превратился в ОГРОМНЫЙ текст, какой бы шрифт вы ни использовали. Также была улучшена поддержка крупного текста в заголовке сведений о блоге на экране ваших сайтов.
+Наконец, мы исправили ошибку, которая иногда приводила к сбою приложения во время модерации комментариев, а другая - исправление ошибки входа в систему для сайтов WordPress.org, которая отображалась встроенной.
 
-Наконец, выбор элементов и фиксированная прокрутка в каталоге плагинов теперь работают сами по себе, и шрифт Noticons больше не будет вызывать сбой приложения в расширенных уведомлениях.
+Это все для 17.6. Увидимся в 17.7!
